--- a/config.yaml
+++ b/config.yaml
@@ -54,3 +54,10 @@ params:
   homeInfoParams:
       Content1: I am an Instructional Technologist at St. Norbert College. This site is where I try to collect the work I do in the open, including podcasting and the ocassional blog post.
       Content2: I [tweet](https://twitter.com/taylorjadin), [post pictures to Instagram](https://www.instagram.com/taylor_jadin/), and [occasionally write code](https://github.com/taylorjadin). My wife and I also sometimes [stream](http://twitch.tv/jadinapproved) or [record a podcast](https://anchor.fm/taylor-jadin) under the name Jadin Approved.
+
+rssLimit: 50
+copyright: Taylor Jadin
+languageCode: en-us
+author:
+  name: Taylor Jadin
+  email: taylor@jadin.me
