--- a/config.yaml
+++ b/config.yaml
@@ -52,7 +52,8 @@ params:
   cover:
     responsiveImages: false
   homeInfoParams:
-      Content1: I am an Instructional Technologist at St. Norbert College. This site is where I try to collect the work I do in the open, including podcasting and the ocassional blog post.
+      Content1: I am the Community Instructional Technologist at Reclaim Hosting. I am passionate about educating and empowering people who want to make cool stuff on the web.
+
       Content2: I [tweet](https://twitter.com/taylorjadin), [post pictures to Instagram](https://www.instagram.com/taylor_jadin/), and [occasionally write code](https://github.com/taylorjadin). My wife and I also sometimes [stream](http://twitch.tv/jadinapproved) or [record a podcast](https://anchor.fm/taylor-jadin) under the name Jadin Approved.
 
 rssLimit: 50
