--- a/config.yaml
+++ b/config.yaml
@@ -63,4 +63,4 @@ languageCode: en-us
 author:
   name: Taylor Jadin
   email: taylor@jadin.me
-disqusShortname: taylorjadin
+disqusShortname: https-jadin-me
