change to use folder names for urls

--- a/config.yaml
+++ b/config.yaml
@@ -40,7 +40,7 @@ outputs:
         - RSS
         - JSON
 Permalinks:
-  post: '/:slug'
+  post: '/:filename'
 params:
   defaultTheme: dark
   disableThemeToggle: true
