--- a/build
+++ b/build
@@ -3,4 +3,16 @@
 hugoDir=/home/jadinme/jadin.me
 siteDir=/home/jadinme/public_html
 
+if ! [ -d $hugoDir ]
+then
+    echo "$hugoDir does not exist. Exiting."
+    exit
+fi
+
+if ! [ -d $siteDir ]
+then
+    echo "$siteDir does not exist. Exiting."
+    exit
+fi
+
 cd $hugoDir && git pull && hugo -d $siteDir
