pull the post out of the oven

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,5 +2,10 @@
   "legacyEditor": false,
   "livePreview": true,
   "showUnsupportedFiles": true,
-  "attachmentFolderPath": "./"
+  "attachmentFolderPath": "./",
+  "spellcheckDictionary": [
+    "EposVox",
+    "EposVox",
+    "EposVox"
+  ]
 }
