--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,15 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "b45c9399a86f663a",
+        "id": "df4018bc98346161",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "content/post/2022/obs-and-streaming-youtubers/index.md",
-            "mode": "source",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -63,7 +59,7 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "b45c9399a86f663a",
+  "active": "df4018bc98346161",
   "lastOpenFiles": [
     "content/post/2022/obs-and-streaming-youtubers/index.md"
   ]
