--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,7 +6,8 @@
   "spellcheckDictionary": [
     "EposVox",
     "EposVox",
-    "EposVox"
+    "EposVox",
+    "DoOO"
   ],
   "promptDelete": false
 }
