--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "content/post/2022/obs-and-streaming-youtubers/index.md",
+            "file": "content/post/2022/february-community-chat/index.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -66,6 +66,9 @@
   },
   "active": "df4018bc98346161",
   "lastOpenFiles": [
+    "content/post/2022/february-community-chat/index.md",
+    "content/post/2022/january-community-chat/index.md",
+    "content/post/2022/january-community-chat/demo-screenshot.jpeg",
     "content/post/2022/obs-and-streaming-youtubers/index.md"
   ]
 }
