add featured image

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -67,8 +67,7 @@
   "active": "df4018bc98346161",
   "lastOpenFiles": [
     "content/post/2022/february-community-chat/index.md",
-    "content/post/2022/january-community-chat/index.md",
-    "content/post/2022/january-community-chat/demo-screenshot.jpeg",
+    "content/post/2022/february-community-chat/screenshot-feb.png",
     "content/post/2022/obs-and-streaming-youtubers/index.md"
   ]
 }
