--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,16 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "df4018bc98346161",
+        "id": "0c5182fd545e50b1",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "content/post/2022/unsubmitted-form-warning/index.md",
-            "mode": "source",
-            "backlinks": false,
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -64,7 +59,7 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "df4018bc98346161",
+  "active": "0c5182fd545e50b1",
   "lastOpenFiles": [
     "content/post/2022/unsubmitted-form-warning/index.md",
     "content/post/2022/february-community-chat/index.md",
