--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "content/post/2022/foundry-on-reclaim-cloud/index.md",
+            "file": "content/post/2022/customizing-peertube/index.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -66,15 +66,15 @@
   },
   "active": "df4018bc98346161",
   "lastOpenFiles": [
+    "content/post/2022/customizing-peertube/index.md",
+    "content/post/2018/the-fastest-path-to-a-single-page-website/index.md",
+    "content/post/2019/embedding-pinboard-js-widgets/index.md",
     "content/post/2022/foundry-on-reclaim-cloud/index.md",
     "content/post/2022/foundry-on-reclaim-cloud/slb-foundry.png",
     "content/post/2022/foundry-on-reclaim-cloud/custom-domain-foundry-environment.png",
     "content/draft/customizing-jitsi-meet/index.md",
     "content/draft/she-walks-in-beauty/index.md",
     "content/draft/march-community-chat/index.md",
-    "content/post/2022/foundry-on-reclaim-cloud/foundry.png",
-    "Pasted image 20220317091340.png.md",
-    "content/post/2022/january-community-chat/demo-screenshot.jpeg",
-    "content/post/2022/february-community-chat/index.md"
+    "content/post/2022/foundry-on-reclaim-cloud/foundry.png"
   ]
 }
