--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -7,7 +7,8 @@
     "EposVox",
     "EposVox",
     "EposVox",
-    "DoOO"
+    "DoOO",
+    "PeerTube"
   ],
   "promptDelete": false,
   "alwaysUpdateLinks": true
