--- a/config.yaml
+++ b/config.yaml
@@ -64,9 +64,9 @@ params:
   cover:
     responsiveImages: false
   homeInfoParams:
-      Content1: I am the Community Instructional Technologist at Reclaim Hosting. I am passionate about educating and empowering people who want to make cool stuff on the web.
+      Content1: I work at Reclaim Hosting as our Community Instructional Technologist. I am passionate about educating and empowering people who want to make cool stuff on the web.
 
-      Content2: I [tweet](https://twitter.com/taylorjadin), [post pictures to Instagram](https://www.instagram.com/taylor_jadin/), and [occasionally write code](https://github.com/taylorjadin). My wife and I also sometimes [stream](http://twitch.tv/jadinapproved) or [record a podcast](https://anchor.fm/taylor-jadin) under the name Jadin Approved.
+      Content2: I [tweet](https://twitter.com/taylorjadin), [post pictures to Instagram](https://www.instagram.com/taylor_jadin/), and [occasionally write code](https://github.com/taylorjadin). My wife and I also sometimes [stream](http://twitch.tv/jadinapproved).
 
 rssLimit: 25
 copyright: Taylor Jadin
