--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,8 @@
 {
+    "languageToolLinter.languageTool.ignoredWordsInWorkspace": [
+        "aio]",
+        "hugo",
+        "taio",
+        "typora"
+    ]
 }
