--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -12,5 +12,8 @@
     "static/",
     "themes/"
   ],
-  "promptDelete": false
+  "promptDelete": false,
+  "spellcheckDictionary": [
+    "Kiwami"
+  ]
 }
