--- a/config.yaml
+++ b/config.yaml
@@ -74,7 +74,7 @@ author:
   name: Taylor Jadin
   email: taylor@jadin.me
 disqusShortname: https-jadin-me
-googleAnalytics: UA-114305115-1
+# googleAnalytics: UA-114305115-1
 sitemap:
   changefreq: weekly
   filename: sitemap.xml
