--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -17,7 +17,8 @@
     "Kiwami",
     "subresource",
     "Peertube",
-    "Backblaze"
+    "Backblaze",
+    "Gifski"
   ],
   "alwaysUpdateLinks": true,
   "autoPairBrackets": false,
