--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -18,7 +18,9 @@
     "subresource",
     "Peertube",
     "Backblaze",
-    "Gifski"
+    "Gifski",
+    "Adminer",
+    "Adminer"
   ],
   "alwaysUpdateLinks": true,
   "autoPairBrackets": false,
