updated post before publish

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -20,7 +20,8 @@
     "Backblaze",
     "Gifski",
     "Adminer",
-    "Adminer"
+    "Adminer",
+    "phpMyAdmin"
   ],
   "alwaysUpdateLinks": true,
   "autoPairBrackets": false,
