--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ public
 .DS_Store
 .obsidian/workspace.json
 .obsidian/workspace-mobile.json
+.obsidian/plugins/obsidian-languagetool-plugin/data.json
