--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ public
 .obsidian/workspace.json
 .obsidian/workspace-mobile.json
 .obsidian/plugins/obsidian-languagetool-plugin/data.json
+/.obsidian/plugins/companion/data.json
