--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -21,7 +21,16 @@
     "Gifski",
     "Adminer",
     "Adminer",
-    "phpMyAdmin"
+    "phpMyAdmin",
+    "UMW",
+    "Yolobox",
+    "Yolobox",
+    "Yolobox",
+    "Yoloboxes",
+    "Crestron",
+    "Yolobox",
+    "Yoloboxes",
+    "UMW"
   ],
   "alwaysUpdateLinks": true,
   "autoPairBrackets": false,
