--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "languageToolLinter.languageTool.ignoredWordsInWorkspace": [
         "aio]",
+        "foldergallery",
         "hugo",
         "taio",
         "typora"
