--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -30,7 +30,8 @@
     "Crestron",
     "Yolobox",
     "Yoloboxes",
-    "UMW"
+    "UMW",
+    "Kagi"
   ],
   "alwaysUpdateLinks": true,
   "autoPairBrackets": false,
